Fix responsive poster layout so that buttons and dimensions are not resized to unreadable small size

--- a/src/styles/components/LightWall.less
+++ b/src/styles/components/LightWall.less
@@ -27,6 +27,8 @@
 
 .LightWall__scaler {
   position: relative;
+  width: 0;
+  height: 0;
 }
 
 .LightWall__debug-menu {
@@ -44,8 +46,8 @@
 
 .LightWall .LightWall__zoom-container {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 5%;
+  left: 5%;
   z-index: 2000;
 }
 
